# Adam

./: .gitignore  AGENTS.md  CLAUDE.md  CLAUDE_COLLAB.md  CONTRIBUTING.md  Makefile  README.md  app.py  codex_notes_garden.md  pyproject.toml  requirements.txt
docs/: ARCHITECTURE_OVERVIEW.md  CANONICAL_ONTOLOGY.md  DOCUMENT_INGEST.md  FIRST_RUN_QUICKSTART.md  GAP_FIXES.md  GEOMETRY_EVIDENCE_POLICY.md  GETTING_STARTED.md  GRAPH_SCHEMA.md  HOW_TO_USE_ADAM_TUI.md  HUM_SPEC.md  IDRIS_IMPLEMENTATION_STATUS.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_TRUTH_TABLE.md  INFERENCE_PROFILES.md  KNOWN_LIMITATIONS.md  MEASUREMENT_EVENT_MODEL.md  OBSERVATORY_E2E_AUDIT.md  OBSERVATORY_GEOMETRY_SPEC.md  OBSERVATORY_INTERACTION_SPEC.md  OBSERVATORY_SPEC.md  PATCH_MANIFEST_V1_2.md  SOURCE_MANIFEST.md  TRADITION_EMBEDDING_GUIDE.md  TUI_SPEC.md  TURN_LOOP_AND_MEMBRANE.md  USER_JOURNEYS.md  UX_AUDIT_AND_REPAIRS.md  WHY_THIS_MATTERS.md  integrate-sqlite.md
eden/: __init__.py  app.py  browser.py  budget.py  config.py  hum.py  inference.py  logging.py  ontology_projection.py  regard.py  retrieval.py  runtime.py  semantic_relations.py  utils.py
eden-idris/: build.sh  eden.ipkg  shamash-hook.js
eden_adam.egg-info/: PKG-INFO  SOURCES.txt
scratch_space_writing_tasks/: wp_draft_prompt.md  wp_draft_prompt_changelog.md
scripts/: check_observatory_build_meta.py  run_hum_user_journey_audit.py  run_tanakh_render_validation.py  sync_tanakh_uxlc.py
tests/: conftest.py  test_browser_open.py  test_budget.py  test_cli_entry.py  test_frontend_assets.py  test_geometry.py  test_graph_store.py  (+14 more)
(+181 files in other folders)
